# AMP-Tools-public

./: .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  KinoPlot.py  Plot3D.py  README.md  build.sh  build_and_run.sh  docker-compose.yml  pull_and_run.sh  requirements.txt  src.txt
file_dump/in/: example_plan.yaml  example_problem.yaml  example_random_problem_spec.yaml
include/: AMPCore.h
include/hw/: HW2.h  HW4.h  HW5.h  HW6.h  HW7.h  HW8.h  HW9.h
include/public/: CMakeLists.txt  ConfigurationSpace_impl.h  GraphContainers.h  Graph_impl.h  HW2_impl.h  HW4_impl.h  HW5_impl.h  HW6_impl.h  HW7_impl.h  HW8_impl.h  HW9_impl.h  Path_impl.h  PythonObjects.h  ScriptCaller.h  ScriptCaller_impl.h  Visualizer_impl.h  _VarsPublic.h.in
include/tools/: AgentTypes.h  Algorithms.h  ArgParser.h  ConfigurationSpace.h  DynamicAgent.h  Environment.h  Graph.h  LinkManipulator.h  Logging.h  Obstacle.h  Path.h  PotentialFunction.h  Random.h  Serializer.h  StatePropagator.h  Time.h  Visualizer.h
install/linux/lib/: libyaml-cpp.so.0.7.0
install/macos/lib/: libAMPCorePrivate.dylib
install/macos_arm64/lib/: libAMPCorePrivate.dylib  libyaml-cpp.0.7.0.dylib  libyaml-cpp.0.8.0.dylib  libyaml-cpp.0.8.dylib  libyaml-cpp.dylib
install/macos_x86/lib/: libAMPCorePrivate.dylib  libyaml-cpp.0.7.0.dylib  libyaml-cpp.0.7.dylib  libyaml-cpp.0.8.0.dylib  libyaml-cpp.dylib
install/ubuntu20/lib/: libyaml-cpp.so.0.7.0
install/ubuntu22/lib/: libyaml-cpp.so.0.7.0  libyaml-cpp.so.0.8.0  libyaml-cppd.so.0.8
ompl/: CMakeLists.txt  run.sh  visualize.py
ompl/includes/: PostProcessing.h  StatePropagatorDatabase.h  StateSpaceDatabase.h  StateValidityCheckerDatabase.h  World.h  tools.py
ompl/problems/: DemoCntrl.yml  DemoGeo.yml
ompl/solutions/2024_11_11_13_16_39/: agent0.txt  problem.yml
ompl/src/: control.cpp  geometric.cpp
scripts/: CMakeLists.txt  FigureHandler.py  Plotter.py  VisualizeCSpace.py  VisualizeCircleAgent.py  VisualizeCoordinateMap.py  VisualizeDynamicAgent.py  VisualizeEnvironment.py  VisualizeLinkManipulator.py  VisualizePolygons.py  VisualizePotentialFunction.py
scripts/bash/: build.sh.in  build_and_run.sh.in  env.sh.in  grade.sh.in
src/public/: CMakeLists.txt  PythonObjects.cpp  ScriptCaller.cpp  Visualizer.cpp
ws/: Bug.cpp  Bug.h  Bug1.cpp  Bug1.h  Bug2.cpp  Bug2.h  CMakeLists.txt  Helper.cpp  Helper.h  Line.cpp  Line.h  MyBugAlgorithm.cpp  MyBugAlgorithm.h  Obstacle.h  README.md  Utils.cpp  Utils.h  World.h  main.cpp
ws/FinalProject/: MyFlightPlanner.cpp  MyFlightPlanner.h  MyMultiPlanner.cpp  MyMultiPlanner.h  README.txt  main.cpp
ws/FinalProject_OPT/: MyFlightPlanner.cpp  main.cpp
ws/graph_example/: main.cpp
ws/hw2/: MyBugAlgorithm.cpp  MyBugAlgorithm.h  main.cpp
ws/hw4/: CSpaceConstructor.cpp  CSpaceConstructor.h  CSpaceSkeleton.cpp  CSpaceSkeleton.h  ManipulatorSkeleton.cpp  ManipulatorSkeleton.h  MyConfigurationSpace.h  MyLinkManipulator.cpp  MyLinkManipulator.h  MyLinkManupulator.cpp  main.cpp
ws/hw5/: MyGDAlgorithm.cpp  MyGDAlgorithm.h  main.cpp
ws/hw6/: MyAStar.cpp  MyAStar.h  MyAlgos.h  MyCSConstructors.cpp  MyCSConstructors.h  MyGridCSpace.h  WaveFront.cpp  WaveFront.h  main.cpp
ws/hw6_graph_example/: main.cpp
ws/hw6_skeleton/: main.cpp
ws/hw7/: AStar.cpp  AStar.h  GenericPRM.cpp  GenericPRM.h  MyPRM.cpp  MyPRM.h  MyPointMotionPlanner.h  MySamplingBasedPlanners.cpp  MySamplingBasedPlanners.h  hw7helpers.cpp  hw7helpers.h  main.cpp
ws/hw8/: GenericPRM.cpp  GenericPRM.h  MyCentralPlanner.cpp  MyMultiAgentPlanners.h  MyMultiPlanner.h  main.cpp  myMACollChecker.cpp  myMACollChecker.h
ws/hw9/: MyKinoRRT.cpp  MyKinoRRT.h  main.cpp
ws/hybrids/: main.cpp
ws/potential_function_example/: main.cpp
ws/shared/: CSpaceConstructor.cpp  CSpaceConstructor.h  DFA.h  HelpfulClass.cpp  HelpfulClass.h  KinoRRT.cpp  KinoRRT.h  ManipulatorSkeleton.cpp  ManipulatorSkeleton.h  MyAStar.cpp  MyAStar.h  MyCollisionCheckers.cpp  MyCollisionCheckers.h  MyConfigurationSpace.h  MyLinkManipulator.cpp  MyLinkManipulator.h  MyPRM.cpp  MyPRM.h  MyRRT.cpp  MyRRT.h  MySamplingBasedPlanners.cpp  MySamplingBasedPlanners.h  SynergisticPlanner.h  Triangulate.h  testing.cpp
